force-app/main/default/objects/ADS_Audit__c/ADS_Audit__c.object-meta.xml
<CustomObject>
    <label>ADS Audit</label>
    <nameField>
        <displayFormat>ADS{00000000}</displayFormat>
        <label>ADS Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADS Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>