force-app/main/default/objects/ADS_Audit__c/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <label>Agency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>