force-app/main/default/objects/ADS_Audit__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>&quot;= Instructor Name&quot;</description>
    <label>Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>