force-app/main/default/objects/ADS_Audit__c/fields/Agency_State__c.field-meta.xml
<CustomField>
    <fullName>Agency_State__c</fullName>
    <label>Agency State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>