force-app/main/default/objects/ADS_Audit__c/fields/Agency_Street1__c.field-meta.xml
<CustomField>
    <fullName>Agency_Street1__c</fullName>
    <description>Address Line 1</description>
    <label>Agency Street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>