force-app/main/default/objects/ADS_Audit__c/fields/Agency_Street2__c.field-meta.xml
<CustomField>
    <fullName>Agency_Street2__c</fullName>
    <label>Agency Street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>