force-app/main/default/objects/ADS_Audit__c/fields/Agency_Zip__c.field-meta.xml
<CustomField>
    <fullName>Agency_Zip__c</fullName>
    <label>Agency Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>