force-app/main/default/objects/ADS_Audit__c/fields/Assignment_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Create_Date__c</fullName>
    <label>Assignment Create Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>