force-app/main/default/objects/ADS_Audit__c/fields/Assignment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_End_Date__c</fullName>
    <label>Assignment End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>