force-app/main/default/objects/ADS_Audit__c/fields/Assignment_is_active__c.field-meta.xml
<CustomField>
    <fullName>Assignment_is_active__c</fullName>
    <label>Assignment is active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>