force-app/main/default/objects/ADS_Audit__c/fields/Assignment_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Role__c</fullName>
    <description>Must be &quot;instructor&quot;</description>
    <label>Assignment Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>