force-app/main/default/objects/ADS_Audit__c/fields/Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Class_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>lmsilt__Class__c.Course_ID__c</field>
            <operation>contains</operation>
            <valueField>lmsilt__Class__c.Course_ID__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>lmsilt__Class__c</referenceTo>
    <relationshipLabel>ADS Audits</relationshipLabel>
    <relationshipName>ADS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>