force-app/main/default/objects/ADS_Audit__c/fields/Class_State__c.field-meta.xml
<CustomField>
    <fullName>Class_State__c</fullName>
    <label>Class State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>