force-app/main/default/objects/ADS_Audit__c/fields/Class_Status__c.field-meta.xml
<CustomField>
    <fullName>Class_Status__c</fullName>
    <label>Class Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>