force-app/main/default/objects/ADS_Audit__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <label>Contact Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>