force-app/main/default/objects/ADS_Audit__c/fields/Contact_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Contact_Middle_Initial__c</fullName>
    <label>Contact Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>