force-app/main/default/objects/ADS_Audit__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>