force-app/main/default/objects/ADS_Audit__c/fields/Contact_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_ID__c</fullName>
    <label>Contact Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>