force-app/main/default/objects/ADS_Audit__c/fields/Cost_Center_ID__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_ID__c</fullName>
    <label>Cost Center ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>