force-app/main/default/objects/ADS_Audit__c/fields/County_Code__c.field-meta.xml
<CustomField>
    <fullName>County_Code__c</fullName>
    <description>County</description>
    <label>County Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>