force-app/main/default/objects/ADS_Audit__c/fields/Course_City__c.field-meta.xml
<CustomField>
    <fullName>Course_City__c</fullName>
    <label>Course City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>