force-app/main/default/objects/ADS_Audit__c/fields/Course_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Date__c</fullName>
    <label>Course Date</label>
    <type>Date</type>
</CustomField>