force-app/main/default/objects/ADS_Audit__c/fields/Course_Instructor_First_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Instructor_First_Last_Name__c</fullName>
    <description>concatenated string, will likely be broken out to separate first and last name fields</description>
    <label>Course Instructor First Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>