force-app/main/default/objects/ADS_Audit__c/fields/Course_Instructor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Instructor_First_Name__c</fullName>
    <label>Course Instructor First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>