force-app/main/default/objects/ADS_Audit__c/fields/Course_Instructor_Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_Instructor_Volunteer_ID__c</fullName>
    <label>Course Instructor Volunteer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>