force-app/main/default/objects/ADS_Audit__c/fields/Course_State__c.field-meta.xml
<CustomField>
    <fullName>Course_State__c</fullName>
    <label>Course State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>