force-app/main/default/objects/ADS_Audit__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>C</description>
    <label>Delivery Method</label>
    <length>1</length>
    <type>Text</type>
</CustomField>