force-app/main/default/objects/ADS_Audit__c/fields/DLN__c.field-meta.xml
<CustomField>
    <fullName>DLN__c</fullName>
    <label>DLN</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>