force-app/main/default/objects/ADS_Audit__c/fields/Dreams_Instructor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Dreams_Instructor_First_Name__c</fullName>
    <formula>Class_Id__r.Instructor__r.Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dreams Instructor First Name</label>
    <type>Text</type>
</CustomField>