force-app/main/default/objects/ADS_Audit__c/fields/Dreams_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Dreams_Record_Type__c</fullName>
    <description>Always &#39;A&#39; for Agency or &#39;I&#39; for Instructor</description>
    <inlineHelpText>Always &#39;A&#39; for Agency or &#39;I&#39; for Instructor</inlineHelpText>
    <label>Dreams Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>