force-app/main/default/objects/ADS_Audit__c/fields/Dreams_SSN__c.field-meta.xml
<CustomField>
    <fullName>Dreams_SSN__c</fullName>
    <description>Not literally the SSN, but rather a derived unique identifier.</description>
    <label>Dreams SSN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>