force-app/main/default/objects/ADS_Audit__c/fields/Federal_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_ID__c</fullName>
    <description>Not literally the Fed Tax ID, but rather a derived unique identifier</description>
    <label>Federal ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>