force-app/main/default/objects/ADS_Audit__c/fields/File_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Date__c</fullName>
    <label>Source File Date</label>
    <type>Date</type>
</CustomField>