force-app/main/default/objects/ADS_Audit__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>Source File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>