force-app/main/default/objects/ADS_Audit__c/fields/Instructor_Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Agency_Code__c</fullName>
    <label>Instructor Agency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>