force-app/main/default/objects/ADS_Audit__c/fields/Instructor_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor Assignment</label>
    <referenceTo>Volunteer_Assignment__c</referenceTo>
    <relationshipLabel>ADS Audits</relationshipLabel>
    <relationshipName>ADS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>