force-app/main/default/objects/ADS_Audit__c/fields/Instructor_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Client_ID__c</fullName>
    <description>Notes: Volunteer ID</description>
    <label>Instructor Client ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>