force-app/main/default/objects/ADS_Audit__c/fields/Instructor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ADS Audits</relationshipLabel>
    <relationshipName>ADS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>