force-app/main/default/objects/ADS_Audit__c/fields/Instructor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Instructor_First_Name__c</fullName>
    <description>Same as Agency Info</description>
    <label>Instructor First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>