force-app/main/default/objects/ADS_Audit__c/fields/Instructor_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Middle_Initial__c</fullName>
    <description>Same as Agency Info</description>
    <label>Instructor Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>