force-app/main/default/objects/ADS_Audit__c/fields/Instructor_SSN__c.field-meta.xml
<CustomField>
    <fullName>Instructor_SSN__c</fullName>
    <description>Same as Agency Info</description>
    <label>Instructor SSN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>