force-app/main/default/objects/ADS_Audit__c/fields/Instructor_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Suffix__c</fullName>
    <description>Same as Agency Info</description>
    <label>Instructor Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>