force-app/main/default/objects/ADS_Audit__c/fields/LMS_Roster_LMDT__c.field-meta.xml
<CustomField>
    <fullName>LMS_Roster_LMDT__c</fullName>
    <label>LMS Roster LMDT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>