force-app/main/default/objects/ADS_Audit__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>State Code. State where the service is rendered.</description>
    <label>Location</label>
    <length>2</length>
    <type>Text</type>
</CustomField>