force-app/main/default/objects/ADS_Audit__c/fields/NYPay_Course_Date__c.field-meta.xml
<CustomField>
    <fullName>NYPay_Course_Date__c</fullName>
    <description>YMMDD format</description>
    <label>NYPay Course Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>