force-app/main/default/objects/ADS_Audit__c/fields/Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Last_Name__c</fullName>
    <label>Owner Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>