force-app/main/default/objects/ADS_Audit__c/fields/Owner_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Owner_Middle_Initial__c</fullName>
    <label>Owner Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>