force-app/main/default/objects/ADS_Audit__c/fields/Owner_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Owner_Suffix__c</fullName>
    <label>Owner Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>