force-app/main/default/objects/ADS_Audit__c/fields/Participant_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Participant_Address_Line1__c</fullName>
    <label>Participant Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>