force-app/main/default/objects/ADS_Audit__c/fields/Participant_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Participant_Birthdate__c</fullName>
    <label>Participant Birthdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>