force-app/main/default/objects/ADS_Audit__c/fields/Participant_City__c.field-meta.xml
<CustomField>
    <fullName>Participant_City__c</fullName>
    <label>Participant City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>