force-app/main/default/objects/ADS_Audit__c/fields/Participant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Participant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ADS Audits (Participant Contact)</relationshipLabel>
    <relationshipName>ADS_Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>