force-app/main/default/objects/ADS_Audit__c/fields/Participant_DL_State__c.field-meta.xml
<CustomField>
    <fullName>Participant_DL_State__c</fullName>
    <label>Participant DL State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>