force-app/main/default/objects/ADS_Audit__c/fields/Participant_DOB__c.field-meta.xml
<CustomField>
    <fullName>Participant_DOB__c</fullName>
    <label>Participant DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>