force-app/main/default/objects/ADS_Audit__c/fields/Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Email__c</fullName>
    <label>Participant Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>