force-app/main/default/objects/ADS_Audit__c/fields/Participant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_First_Name__c</fullName>
    <label>Participant First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>