force-app/main/default/objects/ADS_Audit__c/fields/Participant_Gender__c.field-meta.xml
<CustomField>
    <fullName>Participant_Gender__c</fullName>
    <label>Participant Gender</label>
    <length>1</length>
    <type>Text</type>
</CustomField>