force-app/main/default/objects/ADS_Audit__c/fields/Participant_LastFirstMid_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_LastFirstMid_Name__c</fullName>
    <label>Participant LastFirstMid Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>