force-app/main/default/objects/ADS_Audit__c/fields/Participant_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Middle_Name__c</fullName>
    <label>Participant Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>