force-app/main/default/objects/ADS_Audit__c/fields/Participant_Name_SFX__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name_SFX__c</fullName>
    <label>Participant Name SFX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>