force-app/main/default/objects/ADS_Audit__c/fields/Participant_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Participant_Postal_Code__c</fullName>
    <label>Participant Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>