force-app/main/default/objects/ADS_Audit__c/fields/Participant_Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_Volunteer_ID__c</fullName>
    <label>Participant Volunteer ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>