force-app/main/default/objects/ADS_Audit__c/fields/Pending_Participant__c.field-meta.xml
<CustomField>
    <fullName>Pending_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pending Participant</label>
    <referenceTo>Pending_Participant__c</referenceTo>
    <relationshipLabel>ADS Audits</relationshipLabel>
    <relationshipName>ADS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>