force-app/main/default/objects/ADS_Audit__c/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <label>Program Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>