force-app/main/default/objects/ADS_Audit__c/fields/Program_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Program_Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Volunteer</label>
    <referenceTo>Program_Volunteer__c</referenceTo>
    <relationshipLabel>ADS Audits</relationshipLabel>
    <relationshipName>ADS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>