force-app/main/default/objects/ADS_Audit__c/fields/PV_Program__c.field-meta.xml
<CustomField>
    <fullName>PV_Program__c</fullName>
    <description>Driver safety</description>
    <label>PV Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>