force-app/main/default/objects/ADS_Audit__c/fields/Roster__c.field-meta.xml
<CustomField>
    <fullName>Roster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roster</label>
    <referenceTo>lmsilt__Roster__c</referenceTo>
    <relationshipLabel>ADS Audits</relationshipLabel>
    <relationshipName>ADS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>