force-app/main/default/objects/ADS_Audit__c/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <description>Y/N, Is this volunteer a state coordinator?</description>
    <label>SC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>