force-app/main/default/objects/ADS_Audit__c/fields/SP_22__c.field-meta.xml
<CustomField>
    <fullName>SP_22__c</fullName>
    <label>SP_22</label>
    <length>22</length>
    <type>Text</type>
</CustomField>