force-app/main/default/objects/ADS_Audit__c/fields/SP_4__c.field-meta.xml
<CustomField>
    <fullName>SP_4__c</fullName>
    <description>literally 4 spaces</description>
    <label>SP_4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>