force-app/main/default/objects/ADS_Audit__c/fields/SP_5__c.field-meta.xml
<CustomField>
    <fullName>SP_5__c</fullName>
    <label>SP_5</label>
    <length>5</length>
    <type>Text</type>
</CustomField>