force-app/main/default/objects/ADS_Audit__c/fields/Sponsor_Code__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Code__c</fullName>
    <label>Sponsor Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>