force-app/main/default/objects/ADS_Audit__c/fields/Supervisor_Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Volunteer_ID__c</fullName>
    <label>Supervisor Volunteer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>