force-app/main/default/objects/ADS_Audit__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Always &#39;A&#39;</description>
    <inlineHelpText>Always &#39;A&#39;</inlineHelpText>
    <label>Transaction Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>