force-app/main/default/objects/ADS_Audit__c/fields/Z2__c.field-meta.xml
<CustomField>
    <fullName>Z2__c</fullName>
    <label>Z2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>