force-app/main/default/objects/ADS_Audit__c/recordTypes/Agency_Dreams.recordType-meta.xml
<RecordType>
    <fullName>Agency_Dreams</fullName>
    <active>true</active>
    <label>Agency Dreams</label>
</RecordType>