force-app/main/default/objects/ADS_Audit__c/recordTypes/DE_Participant.recordType-meta.xml
<RecordType>
    <fullName>DE_Participant</fullName>
    <active>true</active>
    <label>DE Participant</label>
</RecordType>