force-app/main/default/objects/ADS_Audit__c/recordTypes/IDS_Certificates.recordType-meta.xml
<RecordType>
    <fullName>IDS_Certificates</fullName>
    <active>true</active>
    <label>IDS Certificates</label>
</RecordType>