force-app/main/default/objects/ADS_Audit__c/recordTypes/Instructor_Dreams.recordType-meta.xml
<RecordType>
    <fullName>Instructor_Dreams</fullName>
    <active>true</active>
    <label>Instructor Dreams</label>
</RecordType>