force-app/main/default/objects/ADS_Audit__c/recordTypes/NY_Certs.recordType-meta.xml
<RecordType>
    <fullName>NY_Certs</fullName>
    <active>true</active>
    <label>NY Certs</label>
</RecordType>