force-app/main/default/objects/ADS_Audit__c/recordTypes/NY_Pay.recordType-meta.xml
<RecordType>
    <fullName>NY_Pay</fullName>
    <active>true</active>
    <label>NY Pay</label>
</RecordType>