force-app/main/default/objects/ADS_Audit__c/recordTypes/Volunteer_Recognition.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Recognition</fullName>
    <active>true</active>
    <label>Volunteer Recognition</label>
</RecordType>